[package]
name = "cetkaik_render_to_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cetkaik_fundamental = "1.0.0"
cetkaik_traits = "1.0.0"
colored = "2.0.0"
cetkaik_compact_representation = "1.0.1"
cetkaik_naive_representation = "1.0.0"

[dev-dependencies]